Adjusted file path and added header.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
          <title>Display Customer Purchase Orders</title>         
      </head>
      <body onload="main()">
-     
+        <h1>Customer Purchase Orders</h1>
      </body>
      </html>
